# halosgho.st

./: Main.hs  Makefile  Makerules  PKGBUILD  README.rst  Referrer.hs  Tuprules.tup  configure  hgweb.cabal  overrides.mk  rules  skeleton
assets/: main.css
bld/: PKGBUILD  hgweb.install
cfg/: hitch.conf  nftables.conf
conf/: hgredirector.conf  hgweb.conf
extra/: acme-client.service  acme-client.timer  hitch.conf  minify.awk  nftables.conf
pages/: index.htm  index.html
pages/blog/: index.html
pages/blog/planck/: index.html
pages/talks/: index.html
pages/talks/ub-intro/: index.html
src/: Tupfile  common.h  config.h  defaults.h  main.c  main.h  redirector.c  routes.c  routes.h
svc/: hgredirector.service  hgweb.service  hitch.service  new-year.timer  uacme.service  uacme.timer  update-copyright.service  update-copyright.timer
talks/: index.html
