name:                hgweb
version:             1.0.0.0
synopsis:            My homepage
homepage:            https://halosgho.st
license:             GPL-3
license-file:        LICENSE
author:              halosghost
maintainer:          halosghost@archlinux.info
build-type:          Simple
cabal-version:       >=1.22

executable hgweb
  main-is:           Main.hs
  other-extensions:  OverloadedStrings
                     FlexibleContexts
  ghc-options:       -Wall -O2
  build-depends:     base                  >= 4.8     && < 4.9,
                     scotty                >= 0.10.2  && < 0.11,
                     scotty-tls            >= 0.4.0   && < 0.5,
                     wai-extra             >= 3.0     && < 3.1,
                     wai-middleware-static >= 0.8.0   && < 0.9,
                     lucid                 >= 2.9.2   && < 2.10,
                     text                  >= 1.2.1.3 && < 1.3
  default-language:  Haskell2010
