name:               hgweb
version:            1.1.0.0
synopsis:           My homepage
homepage:           https://halosgho.st
license:            GPL-3
license-file:       LICENSE
author:             halosghost
maintainer:         halosghost@archlinux.info
build-type:         Simple
cabal-version:      >=1.22

executable hgweb
  main-is:          Main.hs
  default-language: Haskell2010
  other-extensions: OverloadedStrings
                    FlexibleContexts
  ghc-options:      -Wall -O2 -threaded
  build-depends:    base                  >= 4.8     && < 4.10,
                    scotty                >= 0.10.2  && < 0.12,
                    scotty-tls            >= 0.4.1   && < 0.5,
                    tls                   >= 1.3.3   && < 1.4,
                    warp                  >= 3.1.7   && < 3.2,
                    warp-tls              >= 3.1.4   && < 3.2,
                    wai-extra             >= 3.0     && < 3.1,
                    wai-middleware-static >= 0.8.0   && < 0.9,
                    wai-middleware-etag   >= 0.1.1   && < 0.2,
                    lucid                 >= 2.9.2   && < 2.10,
                    lucid-svg             >= 0.6     && < 0.8,
                    text                  >= 1.2.1.3 && < 1.3

executable referrer
  main-is:          Referrer.hs
  default-language: Haskell2010
  other-extensions: OverloadedStrings
                    FlexibleContexts
  ghc-options:      -Wall -O2 -threaded
  build-depends:    base                  >= 4.8     && < 4.10,
                    scotty                >= 0.10.2  && < 0.12,
                    text                  >= 1.2.1.3 && < 1.3
